--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -8,4 +8,4 @@ jobs:
          - uses: docker://docker.io/fluidattacks/cli:latest
            name: machineStandalone
            with:
-             args: skims scan ./
+             args: m gitlab:fluidattacks/universe@trunk /skims scan ./dev.yml
