--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -8,6 +8,6 @@ jobs:
          - uses: docker://docker.io/fluidattacks/cli:latest
            name: machineStandalone
            with:
-             args: /skims scan --csv skims/test/outputs/test.csv
+             args: skims scan --csv skims/test/outputs/test.csv
 
 
