--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -9,5 +9,7 @@ jobs:
            name: machineStandalone
            with:
              args: skims scan --csv skims/test/outputs/test.csv
+             strict: true
+             
 
 
