--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -8,8 +8,7 @@ jobs:
          - uses: docker://docker.io/fluidattacks/cli:latest
            name: machineStandalone
            with:
-             args: skims scan .
-             strict: true
+             args: skims scan ./config.yaml
              
 
 
